org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-05-13
	- Moved types from ...client related with the proper metadata editor to new package ...client.metadata:
		MainPanel
		MetadataGroupPanel
		MetadataPanel
		OntologyPanel
		ResourceTypeWidget
		
	- Removed unused types:
		voc2rdf.rpc.Voc2RdfService
		voc2rdf.rpc.Voc2RdfServiceAsync
		
	- Preparing portal dispatch:
		I created a new module org.mmisw.iserver, which I'm starting to use here to support
		the portal interface and eventually other operations as the refactoring progresses.
		See sibling project org.mmisw.iserver.
	
	
2009-05-11
	- Preparations to show ontology data in view only mode.
		Initially, to show term table for a voc2rdf ontology (based on the associated CSV)
		
	- View only of an ontology now does requests to "Ont" to get the model (via Jena) and the
	  contents of the CSV (if any) via a new Ont operation with (parameter "_csv").
	  TODO remove the "_lpath" operation in "Ont"
	
	
2009-05-07
	- implemented issue #135: preserve URIS from simple vocabularies that allready have defines URIs
	  It works as follows:
	  	- Enabled when the header label for the first column is "URI" (ignoring case) (so, no extra
	  	  check box or other GUI component for the moment)
	  	- Converter: uses a flag keyIsUri which is set to true in createDatatypeProperty if the label
	  	  of the first column is "URI"; then createIndividual uses the flag to determine the
	  	  URI for the individual to be created.
	
2009-05-06
	- fixed issue #131: use abbreviation of organization instead of authority in the web form
	
	- fixed issue 132: add (optional) on the "uri of class" label
		But, instead of adding "optional" to the label, now the "name" field is marked with the
		red star, indicating that the name of the class is required, while the label
		for the URI of the class remains as it is. To complement, a preamble in the interface